--- a/src/app/eo/create-event/create-event.html
+++ b/src/app/eo/create-event/create-event.html
@@ -124,8 +124,8 @@
           <input type="text" class="form-control" formControlName="ticketType" placeholder="e.g., VIP, Regular">
         </div>
         <div class="form-group">
-          <label>Price (IDR) *</label>
-          <input type="number" class="form-control" formControlName="price" placeholder="e.g., 350000">
+          <label>Price (USD) *</label>
+          <input type="number" class="form-control" formControlName="price" placeholder="e.g., 350">
         </div>
       </div>
 
