--- a/src/app/ticket-page/ticket-buy/ticket-buy.css
+++ b/src/app/ticket-page/ticket-buy/ticket-buy.css
@@ -301,7 +301,7 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding: 20px;
+   padding: 0 20px;
    background: rgba(254, 183, 6, 1);
    border-bottom: 1px solid rgba(230, 160, 8, 0.8);
 }
@@ -539,6 +539,11 @@
 .qr-display-modal .modal-header {
    background: linear-gradient(135deg, rgba(254, 183, 6, 1) 0%, rgba(254, 183, 6, 1) 100%);
    text-align: center;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 0 20px;
+   border-bottom: 1px solid rgba(230, 160, 8, 0.8);
 }
 
 .qr-display-modal .modal-header h2 {
