--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,123 +1,122 @@
 <div class="footer-container default-bg-color font" id="page-footer">
-   <div
-      class="g-0 row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
-      <div class="d-flex justify-content-center align-items-center">
-         <div class="title-underline px-4 pb-2 p-responsive d-flex align-items-center justify-content-center">
-            <h1 class="fw-bolder">CONCERT TICKET</h1>
-         </div>
+  <div
+    class="g-0 row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient"
+  >
+    <div class="d-flex justify-content-center align-items-center">
+      <div
+        class="title-underline px-4 pb-2 p-responsive d-flex align-items-center justify-content-center"
+      >
+        <h1 class="fw-bolder">ticketcom</h1>
+      </div>
+    </div>
+
+    <div class="p-0 col-12 w-content h-footer-content text-white row">
+      <!-- Information -->
+      <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
+        <div class="w-75 h-100 pt-2">
+          <h5 class="mb-4 fw-bold">Information</h5>
+
+          <div class="mb-4 info-font">
+            <p class="fw-bold">Address</p>
+            <p>Central Jakarta, Indonesia</p>
+          </div>
+
+          <div class="mb-4 info-font">
+            <p class="fw-bold">Official Email</p>
+            <p><a href="" class="text-white">support@ticketcom.com</a></p>
+          </div>
+
+          <div class="mb-4 info-font">
+            <p class="fw-bold">Hotline Number</p>
+            <p>+62 21 8754 2391</p>
+          </div>
+
+          <div class="info-font">
+            <p class="fw-bold">CS Operating Hours</p>
+            <p>09:00 AM - 11:00 (WIB)</p>
+          </div>
+        </div>
       </div>
 
-      <div class="p-0 col-12 w-content h-footer-content text-white row">
+      <!-- Social Media -->
+      <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
+        <div class="w-75 h-100 pt-2">
+          <h5 class="mb-4 fw-bold">Follow Us</h5>
 
-         <!-- Information -->
-         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
-            <div class="w-75 h-100 pt-2">
-               <h5 class="mb-4 fw-bold">Information</h5>
+          <div class="mb-4 info-font">
+            <p class="fw-bold">Instagram</p>
+            <p><a href="" class="text-white rm-underline">@ticketcom.official</a></p>
+          </div>
 
-               <div class="mb-4 info-font">
-                  <p class="fw-bold">Address</p>
-                  <p>Central Jakarta, Indonesia</p>
-               </div>
+          <div class="mb-4 info-font">
+            <p class="fw-bold">Youtube</p>
+            <p><a href="" class="text-white rm-underline">ticketcom Official</a></p>
+          </div>
 
-               <div class="mb-4 info-font">
-                  <p class="fw-bold">Official Email</p>
-                  <p><a href="" class="text-white">support@concertticket.com</a></p>
-               </div>
+          <div class="mb-4 info-font">
+            <p class="fw-bold">Tiktok</p>
+            <p><a href="" class="text-white rm-underline">@ticketcom_official</a></p>
+          </div>
 
-               <div class="mb-4 info-font">
-                  <p class="fw-bold">Hotline Number</p>
-                  <p>+62 21 8754 2391</p>
-               </div>
-
-               <div class="info-font">
-                  <p class="fw-bold">CS Operating Hours</p>
-                  <p>09:00 AM - 11:00 (WIB)</p>
-               </div>
-            </div>
-         </div>
-
-         <!-- Social Media -->
-         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center ">
-            <div class="w-75 h-100 pt-2">
-               <h5 class="mb-4 fw-bold">Follow Us</h5>
-
-               <div class="mb-4  info-font">
-                  <p class="fw-bold">Instagram</p>
-                  <p><a href="" class="text-white rm-underline">@concertticket.official</a></p>
-
-               </div>
-
-               <div class="mb-4 info-font">
-                  <p class="fw-bold">Youtube</p>
-                  <p><a href="" class="text-white rm-underline">Concert Ticket Official</a></p>
-               </div>
-
-               <div class="mb-4 info-font">
-                  <p class="fw-bold">Tiktok</p>
-                  <p><a href="" class="text-white rm-underline">@concertticket_official</a></p>
-               </div>
-
-               <div class="info-font">
-                  <p class="fw-bold">Facebook</p>
-                  <p><a href="" class="text-white rm-underline">Concert Ticket-Official Page</a></p>
-               </div>
-            </div>
-         </div>
-
-         <!-- Support -->
-         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
-            <div class="w-75 h-100 pt-2">
-               <h5 class="mb-4 fw-bold">Support</h5>
-
-               <div class="mb-4 info-font">
-                  <p><a href="" class="text-white rm-underline">Terms & Condition</a></p>
-
-               </div>
-
-               <div class="mb-4 info-font">
-                  <p><a href="" class="text-white rm-underline">Privacy & Policies</a></p>
-               </div>
-
-               <div class="mb-4 info-font">
-                  <p><a href="" class="text-white rm-underline">Refund & Cancellation Policy</a></p>
-               </div>
-
-               <div class="info-font">
-                  <p><a href="" class="text-white rm-underline">Ticketing Terms</a></p>
-               </div>
-            </div>
-         </div>
-
-         <!-- Go Back to -->
-         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
-            <div class="w-75 h-100 pt-2">
-               <h5 class="mb-4 fw-bold">Back to navigate</h5>
-
-               <div class="mb-4 info-font">
-                  <p><a href="" class="text-white rm-underline">Home</a></p>
-
-               </div>
-
-               <div class="mb-4 info-font">
-                  <p><a href="" class="text-white rm-underline">Tickets</a></p>
-               </div>
-
-               <div class="mb-4 info-font">
-                  <p><a href="" class="text-white rm-underline">FAQ</a></p>
-               </div>
-
-               <div class="info-font">
-                  <p><a href="" class="text-white rm-underline">Contact Us</a></p>
-               </div>
-            </div>
-         </div>
+          <div class="info-font">
+            <p class="fw-bold">Facebook</p>
+            <p><a href="" class="text-white rm-underline">ticketcom Official Page</a></p>
+          </div>
+        </div>
       </div>
-   </div>
 
-   <!-- Copyright -->
-   <div class="w-100 p-3 d-flex justify-content-center align-items-center">
-      <div class="footer-custom d-flex justify-content-center align-items-center">
-         <p>© 2023-2030 PT. Global Concert Ticket. All Rights Reserved.</p>
+      <!-- Support -->
+      <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
+        <div class="w-75 h-100 pt-2">
+          <h5 class="mb-4 fw-bold">Support</h5>
+
+          <div class="mb-4 info-font">
+            <p><a href="" class="text-white rm-underline">Terms & Condition</a></p>
+          </div>
+
+          <div class="mb-4 info-font">
+            <p><a href="" class="text-white rm-underline">Privacy & Policies</a></p>
+          </div>
+
+          <div class="mb-4 info-font">
+            <p><a href="" class="text-white rm-underline">Refund & Cancellation Policy</a></p>
+          </div>
+
+          <div class="info-font">
+            <p><a href="" class="text-white rm-underline">Ticketing Terms</a></p>
+          </div>
+        </div>
       </div>
-   </div>
+
+      <!-- Go Back to -->
+      <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
+        <div class="w-75 h-100 pt-2">
+          <h5 class="mb-4 fw-bold">Back to navigate</h5>
+
+          <div class="mb-4 info-font">
+            <p><a href="" class="text-white rm-underline">Home</a></p>
+          </div>
+
+          <div class="mb-4 info-font">
+            <p><a href="" class="text-white rm-underline">Tickets</a></p>
+          </div>
+
+          <div class="mb-4 info-font">
+            <p><a href="" class="text-white rm-underline">FAQ</a></p>
+          </div>
+
+          <div class="info-font">
+            <p><a href="" class="text-white rm-underline">Contact Us</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Copyright -->
+  <div class="w-100 p-3 d-flex justify-content-center align-items-center">
+    <div class="footer-custom d-flex justify-content-center align-items-center">
+      <p>© 2023-2030 PT. Global ticketcom. All Rights Reserved.</p>
+    </div>
+  </div>
 </div>
